:bug: fix scrollbar is transparent on iframe

--- a/src/assets/css/partials/_globals.scss
+++ b/src/assets/css/partials/_globals.scss
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   font-family: fonts.$lexend;
   color: var(--black);
-  scrollbar-color: var(--red) transparent;
+  scrollbar-color: var(--red) var(--background);
 
   &::selection {
     background: var(--red);
